Update mastodon link

--- a/config.toml
+++ b/config.toml
@@ -34,7 +34,7 @@ custom_css = "css/custom.css"
 
 navbar = [
   # { name = "github", url = "https://github.com/LHolten", rel="me" },
-  { name = "mastodon", url = "https://qoto.org/@LHolten", rel="me" },
+  { name = "mastodon", url = "https://hachyderm.io/@lholten", rel="me" },
 ]
 
 [extra.content_license]
