Switch to abridge theme

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
 # The URL the site will be built for
 base_url = "https://blog.lucasholten.com"
 
-description = "This is where I will be blogging about my projects!"
+title = "Blog by LHolten"
+description = "Rust projects etc"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = false
@@ -9,7 +10,7 @@ compile_sass = false
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 
-theme = "kangae"
+theme = "abridge"
 
 taxonomies = [
   { name = "tags" },
@@ -17,7 +18,7 @@ taxonomies = [
 
 default_language = "en"
 
-generate_feed = true
+generate_feeds = true
 
 [markdown]
 highlight_code = true
@@ -26,35 +27,5 @@ highlight_theme = "gruvbox-dark"
 
 
 [extra]
-author = "Lucas Holten"
-username = "LHolten"
-keywords = [ "rust", "database" ]
-
-custom_css = "css/custom.css"
-
-navbar = [
-  # { name = "github", url = "https://github.com/LHolten", rel="me" },
-  { name = "mastodon", url = "https://hachyderm.io/@lholten", rel="me" },
-]
-
-[extra.content_license]
-# [recommended] the spdx identifier of the license of content on your microblog
-spdx = "CC-BY-NC-ND-4.0"
-
-# [recommended] the url of the license
-url = "https://creativecommons.org/licenses/by-nc-nd/4.0/legalcode.txt"
-
-[extra.source_license]
-# [recommended] the spdx identifier for the license of source code on your microblog
-spdx = "0BSD"
-
-# [recommended] the url of the license
-url = "https://spdx.org/licenses/0BSD.html"
-
-# [recommended] the url of the source code of the microblog itself
-src_url = "https://github.com/LHolten/blog"
-
-[extra.post_footer]
-
-# [recommended] show a permalink to microblog posts
-share = true
+mastodon = "https://hachyderm.io/@lholten"
+github = "LHolten"
