Add Rust Enhanced syntax

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/abridge"]
 	path = themes/abridge
 	url = https://github.com/jieiku/abridge.git
+[submodule "syntaxes/rust-enhanced"]
+	path = syntaxes/rust-enhanced
+	url = git@github.com:rust-lang/rust-enhanced.git
