Remove custom syntax

--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ generate_feeds = true
 
 [markdown]
 highlight_code = true
-extra_syntaxes_and_themes = ["highlight_themes/gruvbox", "syntaxes/rust-enhanced"]
+extra_syntaxes_and_themes = ["highlight_themes/gruvbox"]
 highlight_theme = "css"
 
 
